CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(rmos_tool)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_BUILD_TYPE "Release")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")

FIND_PACKAGE(OpenCV 4 REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_LIBRARIES})

ADD_EXECUTABLE(drawHistogram_gray drawHistogram_gray.cpp)
TARGET_LINK_LIBRARIES(drawHistogram_gray ${OpenCV_LIBRARIES})

ADD_EXECUTABLE(drawHistogram_color drawHistogram_color.cpp)
TARGET_LINK_LIBRARIES(drawHistogram_color ${OpenCV_LIBRARIES})